--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -5,7 +5,10 @@ body {
   font-size: 13px;
   line-height: 18px;
 }
-
+ul {
+  margin: 0;
+  padding: 0;
+}
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -68,6 +71,6 @@ div {
 
   ul li {
     font-size: 12px;
-    list-style: square;
+    list-style: none;
   }
 }
