--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,10 +1,10 @@
 = form_for(@user) do |f|
   - if @user.errors.any?
     #error_explanation
-      %h2 "pluralize(@user.errors.count, 'error') prohibited this user from being saved:"
+      %h2 "#{pluralize(@user.errors.count, 'error')} prohibited this user from being saved:"
       %ul
-      - @user.errors.full_messages.each do |message|
-        %li= message
+        - @user.errors.full_messages.each do |message|
+          %li= message
   .form-group
   = f.label :name
   = f.text_field :name, class: 'form-control'
