--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,14 @@
     = javascript_include_tag :application
     = csrf_meta_tags
 %body
-  .content
-    = yield
+  .container-fluid
+    .row.navigation
+      .col-md-8
+      .col-md-4
+        - if current_user
+          %p
+            = current_user.name
+            = link_to 'Sign out', session_path(session[:user_id]), method: :delete
+    .row
+      .col-md-12
+        = yield
