--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -13,9 +13,9 @@
   = f.text_field :email, class: 'form-control'
   .form-group
   = f.label :password
-  = f.text_field :password, class: 'form-control'
+  = f.password_field :password, class: 'form-control'
   .form-group
   = f.label :password_confirmation
-  = f.text_field :password_confirmation, class: 'form-control'
+  = f.password_field :password_confirmation, class: 'form-control'
   .actions
   = f.submit class: 'btn btn-default'
