--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,12 +8,16 @@
 %body
   .container-fluid
     .row.navigation
-      .col-md-8
-      .col-md-4
+      .col-md-12
         - if current_user
           %p
             = current_user.name
             = link_to 'Sign out', session_path(session[:user_id]), method: :delete
+        - else
+          %p
+            = link_to 'Sign in', new_session_path
+          %p
+            = link_to 'Registration', new_user_path
     .row
       .col-md-12
         = yield
