--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,13 +5,20 @@
     %tr
       %th{ colspan: 3 }
   %tbody
-    - @products.each do |product|
-      %tr
-        %td= image_tag product.image.url(:thumb)
-        %td.product-title= product.title
-        %td= product.description
-        %td
-          %p= link_to 'Show', product_path(product.id)
-          %p= link_to 'Edit', edit_product_path(product)
-          %p= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }
-= link_to 'New Product', new_product_path
+    - unless current_user.nil?
+      - @products.each do |product|
+        %tr
+          %td= image_tag product.image.url(:thumb)
+          %td.product-title= product.title
+          %td= product.description
+          - unless current_user.try(:guest)
+            %td= product.user.shop
+          - if current_user.try(:admin)
+            %td= link_to 'Toggle PRO', toggle_pro_path(product)
+          %td
+            %p= link_to 'Show', product_path(product.id)
+            - if current_user.admin? || current_user?(product.user)
+              %p= link_to 'Edit', edit_product_path(product)
+              %p= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }
+- if !current_user.nil? && current_user.owner?
+  = link_to 'New Product', new_user_product_path(current_user)
