--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,20 +5,11 @@
     %tr
       %th{ colspan: 3 }
   %tbody
-    - unless current_user.nil?
-      - @products.each do |product|
-        %tr
-          %td= image_tag product.image.url(:thumb)
-          %td.product-title= product.title
-          %td= product.description
-          - unless current_user.try(:guest)
-            %td= product.user.shop
-          - if current_user.try(:admin)
-            %td= link_to 'Toggle PRO', toggle_pro_path(product)
-          %td
-            %p= link_to 'Show', product_path(product.id)
-            - if current_user.admin? || current_user?(product.user)
-              %p= link_to 'Edit', edit_product_path(product)
-              %p= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }
+    - unless @products[:ordinary].blank?
+      - @products[:ordinary].each do |ordinary|
+        = render partial: 'products', locals: { product: ordinary }
+    - unless @products[:pro].blank? || current_user.nil?
+      - @products[:pro].each do |pro|
+        = render partial: 'products', locals: { product: pro }
 - if !current_user.nil? && current_user.owner?
   = link_to 'New Product', new_user_product_path(current_user)
