--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,11 +5,7 @@
     %tr
       %th{ colspan: 3 }
   %tbody
-    - unless @products[:ordinary].blank?
-      - @products[:ordinary].each do |ordinary|
-        = render partial: 'products', locals: { product: ordinary }
-    - unless @products[:pro].blank? || current_user.nil?
-      - @products[:pro].each do |pro|
-        = render partial: 'products', locals: { product: pro }
+    - @products.each do |product|
+      = render partial: 'products', locals: { product: product }
 - if !current_user.nil? && current_user.owner?
   = link_to 'New Product', new_user_product_path(current_user)
