--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -6,7 +6,7 @@
   .col-md-8
     %h1.text-uppercase
       = @product.title
-    - unless current_user.try(:guest)
+    - unless current_user.try(:guest?)
       .product-shop.text-justify
         Shop: #{@product.shop_title}
     .product-description.text-justify
